2007-09-23  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:

	Require gupnp 0.6.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp.c:

	Exit the mainloop 'after' unrefing the objects.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	- Move removal of pending GET request to the GET callback.
	- Free the GET request data only at the end of the GET callback.
	- A small optimization.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Add pending GET requests to pending_gets before sending off the
	message.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-renderercombo.c:

	Don't add an already added renderer to the combo.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-av-cp.glade:

	Some random UI fixes and re-arrangment.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-gui.c:
	* src/av-cp-gui.h:
	* src/av-cp-playlisttreeview.c:
	* src/av-cp-playlisttreeview.h:
	* src/av-cp-renderercombo.c:
	* src/av-cp-renderercombo.h:
	* src/av-cp.c:
	* src/av-cp.h:

	Fix the copyright header in AV control-point code.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-av-cp.glade:

	show about-dialog when the relevent menuitem is activated.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light-upnp.c:
	* src/network-light-upnp.h:
	* src/network-light.c:
	* src/network-light.h:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-detailstreeview.h:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-devicetreeview.h:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-eventtreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:
	* src/universal-cp.c:
	* src/universal-cp.h:

	Fix the copyright header.
